@startuml
'https://plantuml.com/class-diagram

'interface IDamageable
'IDamageable : MaxHealth
'IDamageable : CurrentHealth
'IDamageable : HealHealth()
'IDamageable : LoseHealth()
'IDamageable : Die()

class StateMachine<? extends BaseState>
StateMachine *-up- BaseState
StateMachine : PreviousState
StateMachine : CurrentState
StateMachine : Initialize()
StateMachine : ChangeState()

class BaseState
BaseState : EnterState()
BaseState : ExitState()
BaseState : Update()
BaseState : FixedUpdate()

class PlayerActionState extends BaseState
PlayerActionState : Player
PlayerActionState : StateMachine
PlayerActionState *-- StateMachine

class PlayerPrimaryMovementState extends BaseState
PlayerPrimaryMovementState : Player
PlayerPrimaryMovementState : StateMachine
PlayerPrimaryMovementState *-- StateMachine


class PlayerSecondaryMovementState extends BaseState
PlayerSecondaryMovementState : Player
PlayerSecondaryMovementState : StateMachine
PlayerSecondaryMovementState *-- StateMachine


'class PlayerPrimaryIdleState extends PlayerPrimaryMovementState
'PlayerPrimaryIdleState : HandleMove()
'class PlayerSecondaryIdleState extends PlayerSecondaryMovementState
'PlayerSecondaryIdleState : coyoteCounter
'PlayerSecondaryIdleState : Update()
'PlayerSecondaryIdleState : HandleJump()
'PlayerSecondaryIdleState : HandleCrouch()
class PlayerMoveState extends PlayerPrimaryMovementState
PlayerMoveState : isFacingRight
PlayerMoveState : velocity
PlayerMoveState : moveX
PlayerMoveState : EnterState()
PlayerMoveState : ExitState()
PlayerMoveState : FixedUpdate()
PlayerMoveState : Update()
PlayerMoveState : HandleMove()
PlayerMoveState : CalculateVelocity()
PlayerMoveState : NotMoving()


'class PlayerListenState extends PlayerActionState
'PlayerListenState : HandleAttack()
'class PlayerJumpState extends PlayerSecondaryMovementState
'PlayerJumpState : EnterState()
'PlayerJumpState : ExitState()
'PlayerJumpState : Update()
'PlayerJumpState : HandleJumpCancel()
'class PlayerFallState extends PlayerSecondaryMovementState
'PlayerFallState : jumpBufferCounter
'PlayerFallState : fallSpeed
'PlayerFallState : EnterState()
'PlayerFallState : ExitState()
'PlayerFallState : FixedUpdate()
'PlayerFallState : Update()
'PlayerFallState : HandleJump()
'class PlayerAttackState extends PlayerActionState
'PlayerAttackState : EnterState()
'class PlayerCrouchState extends PlayerSecondaryMovementState
'PlayerCrouchState : EnterState()
'PlayerCrouchState : ExitState()
'PlayerCrouchState : Update()
'PlayerCrouchState : HandleCrouchCancel()
'PlayerCrouchState : HandleJump()'



'
'class Player implements IDamageable
'Player : PrimaryMovementStateMachine
'Player : SecondaryMovementStateMachine
'Player : ActionStateMachine
'Player : PrimaryIdleState
'Player : SecondaryIdleState
'Player : MoveState
'Player : ListenState
'Player : JumpState
'Player : FallState
'Player : AttackState
'Player : CrouchState
'Player *-- StateMachine
'Player *-- PlayerActionState
'Player *-- PlayerPrimaryMovementState
'Player *-- PlayerSecondaryMovementState


@enduml